# once

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  once.py  once_test.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: annotate_pr.yml  release.yml  test.yml
once/: __init__.py  _base.py  _iterator_wrappers.py  _state.py
