[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.metadata.hooks.vcs.urls]
source_archive = "https://github.com/DelfinaCare/once/archive/{commit_hash}.zip"

[tool.black]
line-length = 100

[project]
name = "once-py"
dynamic = ["version"]
authors = [
  { name="Ali.Ebrahim", email="ali@delfina.com" },
]
description = "Utility for initialization ensuring functions are called only once"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/DelfinaCare/once"
"Bug Tracker" = "https://github.com/DelfinaCare/once/issues"
